Prod-EU/force-app/main/default/objects/QR_Bill_Mapping__mdt/QR_Bill_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping for Invoking the QR Bill API</description>
    <label>QR Bill API Mapping</label>
    <pluralLabel>QR Bill API Mapping</pluralLabel>
</CustomObject>