Prod-EU/force-app/main/default/objects/QR_Bill_Mapping__mdt/fields/API_Token__c.field-meta.xml
<CustomField>
    <fullName>API_Token__c</fullName>
    <description>Token to invoke the API</description>
    <label>API Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>