Prod-EU/force-app/main/default/objects/QR_Bill_Mapping__mdt/fields/Boundary_Line_Separation_Text__c.field-meta.xml
<CustomField>
    <fullName>Boundary_Line_Separation_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Parameter to invoke the API</description>
    <label>Boundary Line Separation Text</label>
    <type>Checkbox</type>
</CustomField>