Prod-EU/force-app/main/default/objects/QR_Bill_Mapping__mdt/fields/Font_Family__c.field-meta.xml
<CustomField>
    <fullName>Font_Family__c</fullName>
    <description>Parameter to invoke the API</description>
    <label>Font Family</label>
    <length>25</length>
    <type>Text</type>
</CustomField>