Prod-EU/force-app/main/default/objects/QR_Bill_Mapping__mdt/fields/Format_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Format_Payment_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Format Payment Reference</label>
    <type>Checkbox</type>
</CustomField>