Prod-EU/force-app/main/default/objects/QR_Bill_Mapping__mdt/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <description>Parameter to invoke the API</description>
    <label>Page Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>