Prod-EU/force-app/main/default/objects/QR_Bill_Mapping__mdt/fields/Payment_Reference_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference_URL__c</fullName>
    <description>URL to get the QR Payment Reference</description>
    <label>Payment Reference URL</label>
    <type>Url</type>
</CustomField>