Prod-EU/force-app/main/default/objects/QR_Bill_Mapping__mdt/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Parameter to invoke the API</description>
    <label>Resolution</label>
    <length>25</length>
    <type>Text</type>
</CustomField>