Prod-EU/force-app/main/default/objects/QR_Bill_Mapping__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL EndPoint</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>